# Automodel

./: README.md  pyproject.toml
.github/workflows/: cicd-main.yml
docker/: Dockerfile
docs/: index.md
docs/guides/: dataset-overview.md
docs/guides/llm/: finetune.md
docs/guides/vlm/: gemma4.md
examples/convergence/tulu3/eval/: run_eval.sh
examples/convergence/tulu3/models/gpt-oss-20b/: README.md  chat_template.jinja  gptoss_20b_ep8_flashoptim.yaml  gptoss_20b_ep8_te_fusedadam.yaml
examples/convergence/tulu3/models/moonlight-16b/: README.md  chat_template.jinja  moonlight_16b_ep8_cp2_flashoptim.yaml  moonlight_16b_ep8_flashoptim.yaml  moonlight_16b_ep8_te_fusedadam.yaml
examples/convergence/tulu3/models/qwen3-4b/: README.md  qwen3_4b_cp1_flashoptim.yaml  qwen3_4b_cp1_te_fusedadam.yaml  qwen3_4b_cp2_flashoptim.yaml
examples/convergence/tulu3/models/qwen3-moe-30b/: README.md  qwen3_moe_30b_ep8_flashoptim.yaml  qwen3_moe_30b_ep8_te_fusedadam.yaml
examples/dllm_sft/: finetune.py  llada_sft.yaml
examples/llm_finetune/nemotron/: nemotron_nano_v3_hellaswag_peft_te.yaml
examples/llm_finetune/qwen/: qwen2_5_0p5b_instruct_fineproofs_chat.yaml  qwen3_moe_30b_te_hybridep.yaml  qwen3_moe_30b_uccl_ep.yaml
examples/vlm_finetune/gemma4/: gemma4_26b_a4b_moe.yaml  gemma4_2b.yaml  gemma4_31b.yaml  gemma4_4b.yaml
examples/vlm_finetune/nemotron/: nemotron_parse_v1_1.yaml
examples/vlm_finetune/nemotron/parse-ft-tutorial/: parse_finetune_tutorial.ipynb
nemo_automodel/_transformers/: auto_model.py  auto_tokenizer.py  capabilities.py  registry.py  utils.py
nemo_automodel/_transformers/tokenization/: nemo_auto_tokenizer.py
nemo_automodel/components/_peft/: lora.py
nemo_automodel/components/checkpoint/: checkpointing.py
nemo_automodel/components/datasets/dllm/: collate.py  corruption.py
nemo_automodel/components/datasets/llm/: chat_dataset.py  formatting_utils.py  length_grouped_sampler.py
nemo_automodel/components/datasets/vlm/: collate_fns.py
nemo_automodel/components/distributed/: config.py  mamba_cp.py  optimized_tp_plans.py  parallelizer.py
nemo_automodel/components/distributed/pipelining/: functional.py
nemo_automodel/components/loss/: dllm_loss.py
nemo_automodel/components/models/common/: utils.py
nemo_automodel/components/models/gemma4_moe/: model.py  state_dict_adapter.py
nemo_automodel/components/models/mistral4/: state_dict_adapter.py
nemo_automodel/components/models/nemotron_v3/: layers.py  model.py
nemo_automodel/components/moe/: config.py  experts.py  fsdp_mixin.py  layers.py  parallelizer.py
nemo_automodel/components/moe/megatron/: fused_a2a.py  moe_utils.py  token_dispatcher.py
nemo_automodel/components/moe/uccl_ep/: __init__.py  _buffer.py  _utils.py  buffer.py
nemo_automodel/components/utils/: compile_utils.py  model_utils.py
nemo_automodel/recipes/: _dist_setup.py
nemo_automodel/recipes/dllm/: strategy.py  train_ft.py
nemo_automodel/recipes/llm/: train_ft.py
nemo_automodel/recipes/vlm/: finetune.py
nemo_automodel/shared/: import_utils.py
notebooks/: README.md  nemotron_parse_config.yaml  nemotron_parse_finetune.ipynb
scripts/: setup_uccl_ep.sh
skills/: README.md
skills/.claude/skills/: developer-guide  distributed-training  launcher-config  model-onboarding  parity-testing  recipe-development
skills/model-onboarding/: SKILL.md
tests/ci_tests/golden_values/llm_finetune/baichuan/: baichuan_2_7b_squad_h100.jsonl
tests/ci_tests/golden_values/llm_finetune/falcon/: falcon3_7b_instruct_squad_h100.jsonl  falcon3_7b_instruct_squad_peft_h100.jsonl
tests/ci_tests/golden_values/llm_finetune/gemma/: gemma_2_9b_it_squad_h100.jsonl  gemma_2_9b_it_squad_peft_h100.jsonl
tests/ci_tests/golden_values/llm_finetune/glm/: glm_4_9b_chat_hf_squad_h100.jsonl
tests/ci_tests/golden_values/llm_finetune/gpt_oss/: gpt_oss_20b_h100.jsonl
tests/ci_tests/golden_values/llm_finetune/granite/: granite_3_3_2b_instruct_squad_h100.jsonl
tests/ci_tests/golden_values/llm_finetune/llama3_1/: llama3_1_8b_hellaswag_pp_h100.jsonl
tests/ci_tests/golden_values/llm_finetune/llama3_2/: llama3_2_1b_squad_h100.jsonl
tests/ci_tests/golden_values/llm_finetune/mistral/: mistral_nemo_2407_squad_h100.jsonl
tests/ci_tests/golden_values/llm_finetune/moonlight/: moonlight_16b_te_h100.jsonl
tests/ci_tests/golden_values/llm_finetune/phi/: phi_2_squad_peft_h100.jsonl  (+2 more)
tests/functional_tests/context_parallel/: L2_CP_DeepSeekV3_MLA_Test.sh  L2_CP_NemotronV3_Attention_Test.sh  L2_CP_NemotronV3_Hybrid_Test.sh  L2_CP_NemotronV3_Mamba_Test.sh  L2_CP_Qwen3MoE_Attention_Test.sh  L2_CP_Qwen3_5MoE_LinearAttn_Test.sh  run_attention_cp.py  run_hybrid_nemotron_v3_cp.py  run_mamba_cp.py  test_context_parallel.py
tests/unit_tests/_peft/: test_lora.py
tests/unit_tests/_transformers/: test_auto_model.py  test_auto_tokenizer.py
tests/unit_tests/datasets/dllm/: test_collate.py  test_corruption.py
tests/unit_tests/datasets/llm/: test_chat_dataset.py  test_length_grouped_sampler.py  test_tokenizer_apply_functions.py
tests/unit_tests/distributed/: test_mamba_cp.py  test_parallelization_strategies.py
tests/unit_tests/loss/: test_dllm_loss.py
tests/unit_tests/models/gemma4/: test_gemma4_layers.py  test_gemma4_model.py  test_gemma4_state_dict_adapter.py
tests/unit_tests/models/mistral4/: test_mistral4_state_dict_adapter.py
tests/unit_tests/models/nemotron_v3/: test_nemotron_v3_layers.py  test_nemotron_v3_model.py
tests/unit_tests/moe/: test_parallelizer.py  test_uccl_ep_integration.py
tests/unit_tests/recipes/: test_dist_setup.py
tests/unit_tests/recipes/dllm/: test_batch_filtering.py  test_strategy.py
tests/unit_tests/utils/: test_compile_utils.py
tutorials/: README.md
tutorials/dapt/: dapt.ipynb  dapt_config.yaml
tutorials/evaluation/: evaluation.ipynb
tutorials/nemotron-parse/: finetune.ipynb  invoice_dataset.py  nemotron_parse_config.yaml
tutorials/reasoning-sft/: reasoning_sft.ipynb  reasoning_sft_full_config.yaml  reasoning_sft_lora_config.yaml
tutorials/sft-peft/: peft.ipynb  peft_config.yaml  sft.ipynb  sft_config.yaml
(+20 files in other folders)
